--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0.0</version>
   <name>jpa-example</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -24,6 +28,6 @@
       <artifactId>mysql-connector-j</artifactId>
       <version>8.0.31</version>
     </dependency>
-
   </dependencies>
+
 </project>
